fix: change title in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <title>FAQ covid-19</title>
+    <title>FAQ COVID-19 | frequently asked questions about covid-19</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
