refactor: moved font from url to local files

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="frequently asked questions about covid-19" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link href="/fonts/Merriweather/fonts.css" rel="stylesheet">
     <title>FAQ COVID-19 | frequently asked questions about covid-19</title>
   </head>
   <body>
